fixed file name and added media query for top align on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
   color: white;
 }
 
+@media (max-width: 650px) {
+  .App-header {
+    justify-content: flex-start;
+  }
+}
+
 .App-link {
   color: #61dafb;
 }
